# rust-bitcoin-playground

./: .gitignore  Cargo.toml  README.md  WARRANTY.md  example_walletconf.yaml
src/: main.rs  walletconf.yaml
src/server/: get_server.rs  mod.rs  spv_listener.rs
src/wallet/: blockchain_observer.rs  mod.rs  parser.rs  spv_wallet.rs  txbuilder.rs  wallet.rs
wallet/: CONTRIBUTING.md  CUSTOMIZING.md  Cargo.toml  rustfmt.toml
wallet/examples/: a.rs
wallet/src/: cli_option.yaml  constants.rs  main.rs
wallet/src/wallet/: blockchain_observer.rs  spv_wallet.rs  txbuilder.rs
