[package]
name        = "rust-bitcoin"
version     = "0.0.0"
description = "A bitcoin Lightning Network Daemon"
authors     = ["Joe Miyamoto <joemphilips@gmail.com>"]
license     = "WTFPL OR MIT OR Apache-2.0"
homepage    = "https://github.com/joemphilips/rust-bitcoin"

[dependencies]
error-chain = "0.9.0"
clap        = "2.0.0"
brev        = "0.1.7"
