[package]
authors = ["Joe Miyamoto <joemphilips@gmail.com>"]
description = "A bitcoin Lightning Network Daemon"
homepage = "https://github.com/joemphilips/rust-bitcoin"
license = "WTFPL OR MIT OR Apache-2.0"
name = "rust-bitcoin"
version = "0.0.0"

[dependencies]
brev = "0.1.7"
config = "0.7.0"
env_logger = "0.4.3"
error-chain = "0.9.0"
futures = "0.1.16"
lazy_static = "0.2.8"
log = "0.3.8"
noise = "0.4.1"
protobuf = "1.4.1"
rand = "0.3.16"
secp256k1 = "0.6"
tokio-core = "0.1.9"
tokio-io = "0.1.3"

[dependencies.bitcoin]
branch = "update_p2pmessages"
git = "https://github.com/joemphilips/rust-bitcoin"

[dependencies.clap]
features = ["yaml"]
version = "2.19"
